Fix signin on dark mode

--- a/packages/frontend/src/components/pages/SignIn/signin.module.scss
+++ b/packages/frontend/src/components/pages/SignIn/signin.module.scss
@@ -38,6 +38,7 @@
   padding: 40px;
 
   & > h1 {
+    color: rgba(0, 0, 0, 0.87);
     margin: 0 0 24px;
   }
 
